--- a/frontend/templates/accueil.html
+++ b/frontend/templates/accueil.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yco-Drive</title>
-    <link rel="stylesheet" type="text/css" href="../static_css/inscription.css">
+    <link rel="stylesheet" type="text/css" href="../static_css/accueil.css">
 </head>
 <body>
-
 <header>
     <div class="container">
         <div class="header-content">
